[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Redyf <mateusalvespereira7@gmail.com>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pypresence = "^4.3.0"
psutil = "^5.9.5"
uptime = "^3.0.1"
pygetwindow = "^0.0.9"
xlib = "^0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
